syntax = "proto3";

option go_package = "./proto";

service InventoryService {
    rpc GetProductDetails(GetProductDetailsRequest) returns (GetProductDetailsResponse);
}

message GetProductDetailsRequest {
    int64 UserID = 1;
    string BrandName = 2;
    string CategoryName = 3;
    string ProductName = 4;
}

message GetProductDetailsResponse {
    int64 UserID = 2;
    int64 ProductID = 1;
}
